#27 Generalise default projects renderer.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>